@@ -20,6 +20,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.23  2005/02/16 17:11:33  jimmyo
+# munin-node didn't treat default_plugin_user properly (Deb#295366).
+#
 # Revision 1.22  2005/01/24 17:25:37  jimmyo
 # Made TLS mode work.
 #
@@ -231,7 +234,7 @@ while (<FILE>) {
   elsif (($1 eq "default_plugin_user" or $1 eq "default_client_user") and $2)
   {
       my $tmpid = $2;
-      my $defuser = &get_uid ($tmpid);
+      $defuser = &get_uid ($tmpid);
       if (! defined ($defuser))
       {
 	  die "Default user defined in \"$conffile\" does not exist ($tmpid)";
