@@ -1,5 +1,6 @@
 munin (CVS)
 
+  * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
   * Plugins: linux/if* now treats ra* interfaces as wireless.
 
 munin (1.3.1)
